--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio veritatis ducimus maxime nemo
+    voluptatem. Voluptatem nesciunt perspiciatis quidem magnam tempora, sunt earum! Voluptatem iure ullam labore nemo
+    inventore nisi?</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio veritatis ducimus maxime nemo
+    voluptatem. Voluptatem nesciunt perspiciatis quidem magnam tempora, sunt earum! Voluptatem iure ullam labore nemo
+    inventore nisi?</p>
   <nav class="navbar navbar-expand-lg navbar-light position-fixed top-0 end-0 start-0 brand pt-3">
     <div class="container justify-content-between align-items-center">
       <a class="navbar-brand logo" href="#"><img src="images/logo-red.png" alt="angora" title="angora"></a>
